@@ -2,56 +2,25 @@
 <html>
 <head>
 
-
-
-
-		
-		
-		
-
-		
-		
-  
-
-  
-  
-
-  
-  
-
-  
   <title>Searching</title>
 <!-- pwsafe version: 3.11--><!-- Modified: 18/11/2007 --><!--Popup control -->
   <script language="javascript" src="html/popups.js">
 		</script>
-  
-  
-  
+
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-
 <body>
-
-
 
 <object id="popup" type="application/x-oleobject" classid="clsid:adb880a6-d8ff-11cf-9377-00aa003b7a11">
 		</object>
-		
-		<!-- Popup Source File -->
-		
 
-		
-	
+		<!-- Popup Source File -->
+
 <div class="instr">
-		
+
 <h2>Searching for a given text</h2>
 
-
-
-
-
-		
 <p><b>Password Safe</b> allows you to search for entries with a given
   text. This is useful if you don't recall the name of an entry, but
   have a good idea regarding the contents, e.g., <em>the entry with
@@ -62,8 +31,6 @@
   windows similar to the following:</p>
 <p><img style="width: 404px; height: 31px;" alt="Find bar" src="images/find_bar.jpg"></p>
 
-
-
 <p>The simplest way to use this is to just enter the text you're
   looking for, and then press Enter or click on the magnifying glass
   icon to the right of the text field. The number of matching entries
@@ -73,11 +40,15 @@
   next matching entry. When all entries have been
   selected, <b>Password Safe</b> will cycle back to the first.</p>
 
-
+<p>The F3 key performs the repeat find. Just keep pressing F3 to
+cycle to the next entry that satisfies your criteria. Holding the Shift key down
+when pressing F3, finds the <em>previous</em> entry in the database matching 
+your criteria rather than the <em>next</em>. You can also hold down the Shift 
+key when clicking on the magnifying glass icon to find the previous match.</p>
 <ul>
 
   <li>To close the Find toolbar, click on the 'x' to the left of the
-  text, or type Ctrl-F again.</li>
+  text.</li>
 
   <li>By default, the search is case <em>insensitive</em>. To toggle
   between case-sensitive and case-insensitive search, press on the
@@ -88,8 +59,7 @@
   to a subset of entries, determine which fields to search, etc.,
   click on the "..." icon.</li>
 
-  <li>To clear the search text, click on the eraser button.
-    </li>
+  <li>To clear the search text, click on the eraser button.</li>
 </ul>
 
 
@@ -117,6 +87,6 @@
 			<param name="Keyword" value="Find">
 			<param name="Keyword" value="Advanced Search">
 		</object>
-	
+
 </body>
 </html>
