@@ -188,7 +188,7 @@ BEGIN
   IDS_NOMATCHFOUND        "No matches found."
   IDS_FOUNDAMATCH         "Found 1 match."
   IDS_FOUNDMATCHES        "%d of %d matches."
-  IDS_SEARCHWRAPPED       "Search has wrapped, continuing from the top."
+  IDS_SEARCHWRAPPED       "Search has wrapped, continuing from the %s."
   IDS_IMPORTED            "Imported"
   IDS_NOCURRENTSAFE       "[No current database]"
   IDS_CANNOTBEBLANK       "The combination cannot be blank."
@@ -202,6 +202,8 @@ BEGIN
   IDS_DEMO                "TRIAL"
   IDS_SEARCHRESULTS1      "\tNo entries were found containing search string : '%s'"
   IDS_SEARCHRESULTS2      "\tThe following entries were found containing search string : '%s'"
+  IDS_SEARCHTOP           "top"
+  IDS_SEARCHBOTTOM        "bottom"
 END
 
 STRINGTABLE
