@@ -130,6 +130,7 @@
 #define ID_TOOLBUTTON_FINDREPORT        32307
 #define ID_TOOLBUTTON_CLEARFIND         32308
 #define ID_TOOLBUTTON_FINDRESULTS       32309
+#define ID_TOOLBUTTON_FINDUP            32310
 
 #define ID_MENUITEM_CUSTOMIZETOOLBAR    32320
 #define ID_MENUITEM_REFRESH             32321
